Make namespace issues an error

--- a/.editorconfig
+++ b/.editorconfig
@@ -123,7 +123,7 @@ dotnet_style_prefer_is_null_check_over_reference_equality_method = true:warning
 # Undocumented
 dotnet_style_operator_placement_when_wrapping = end_of_line:warning
 csharp_style_prefer_null_check_over_type_check = true:warning
-dotnet_style_namespace_match_folder = true:suggestion
+dotnet_style_namespace_match_folder = true:error
 dotnet_diagnostic.IDE0130.severity = suggestion
 
 # C# Style Rules
