--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,5 @@
-# Version: 4.1.0 (Using https://semver.org/)
-# Updated: 2021-11-15
+# Version: 4.0.0 (Using https://semver.org/)
+# Updated: 2021-10-12
 # See https://github.com/RehanSaeed/EditorConfig/releases for release notes.
 # See https://github.com/RehanSaeed/EditorConfig for updates to this file.
 # See http://EditorConfig.org for more information about .editorconfig files.
@@ -123,7 +123,7 @@ dotnet_style_prefer_is_null_check_over_reference_equality_method = true:warning
 # Undocumented
 dotnet_style_operator_placement_when_wrapping = end_of_line:warning
 csharp_style_prefer_null_check_over_type_check = true:warning
-dotnet_style_namespace_match_folder = true:error
+dotnet_style_namespace_match_folder = true:suggestion
 dotnet_diagnostic.IDE0130.severity = suggestion
 
 # C# Style Rules
@@ -411,6 +411,14 @@ dotnet_naming_symbols.parameters_group.applicable_kinds = parameter
 dotnet_naming_rule.parameters_rule.symbols              = parameters_group
 dotnet_naming_rule.parameters_rule.style                = camel_case_style
 dotnet_naming_rule.parameters_rule.severity             = warning
+
+##########################################
+# Custom Settings
+##########################################
+
+dotnet_diagnostic.CA1707.severity = none
+dotnet_diagnostic.IDE0161.severity = none
+
 
 ##########################################
 # License
